# ZK-Balance

./: .gitignore  README.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: global.d.ts  globals.css  layout.tsx  page.tsx
frontend/app/app/: window.js
frontend/components/: BalanceChecker.tsx  Button.tsx  ConnectWallet.tsx  Input.tsx  ResultDisplay.tsx  UseCases.tsx
frontend/lib/: proofGenerator.ts  stellar.ts  verifier.ts
frontend/public/circuits/: balance_proof.wasm  circuit_final.zkey
frontend/public/zk/: balance_proof.wasm  balance_proof.zkey
frontend/scripts/: test-verifier.js
groth16-verifier/: Cargo.toml  README.md
groth16-verifier/scripts/: deploy-verifier.js
groth16-verifier/src/: lib.rs
zk-circuits/: balance_proof.circom  compile.sh  package-lock.json  package.json  parseKey.js  setup.sh  verification_key.json
zk-circuits/zk_build/: balance_proof_0000.zkey  verification_key.json
